# claude-token-saver

./: .gitignore  .mcp.json  README.md  main.py  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: benchmarks.yml  ci.yml
hooks/: bootstrap.sh  hooks.json  inject-claude-md.sh  inject-memory.sh  post-tool-reindex.sh  post_commit.sh  pre-tool-nudge.sh  reinject-instructions.sh
scripts/: bump-version.sh  uninstall.sh
skills/token-saver-mode/: SKILL.md
src/: chunker.py  config.py  embeddings.py  errors.py  indexer.py  metrics.py  query_expansion.py  server.py  storage.py
tests/: test_config.py  test_errors.py
tests/acceptance/: __init__.py  test_story_10_2_reranking.py  test_story_10_4_reverse_index.py  test_story_10_5_module_clustering.py  test_story_10_6_cross_layer.py  test_story_10_7_test_association.py  test_story_1_1_config.py  test_story_1_2_storage.py  test_story_1_3_embedding.py  test_story_1_4_chunker.py  test_story_1_5_indexer.py  test_story_1_6_search_semantic.py  test_story_2_1_search_exact.py  test_story_2_2_get_file.py  test_story_3_1_incremental_reindex.py  test_story_3_2_reindex_tool.py  test_story_4_1_metrics.py  test_story_4_2_inspect_index.py  test_story_5_1_packaging.py  test_story_5_2_bootstrap.py  test_story_6_1_mcp_instructions.py  test_story_6_2_skill_hooks.py  test_story_7_1_search_hybrid.py  test_story_7_2_audit_search.py  test_story_7_3_byok.py  test_story_7_4_git_hook.py  test_story_8_1_fts_multi_field.py  test_story_8_2_embedding_enrichment.py  test_story_8_3_graph_follow_up.py  test_story_8_4_coverage_transparency.py  (+3 more)
(+17 files in other folders)
